<resources>
    <string name="app_name">CurrencyX</string>
    <string name="currency_x">CurrencyX</string>
    <string name="currency_conversion">Currency Conversion</string>
    <string name="conversion">Conversion</string>
    <string name="convert">convert</string>
    <string name="developed_by_aidan_megee">Developed By Aidan Megee</string>
    <string name="enter_aud">Enter AUD</string>
    <string name="converted_currency">Converted Currency</string>
    <string name="reset">RESET</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="done">DONE</string>
    <string name="exchange_rate_values">1 Australian Dollar Equals 0.62 USD \n \n 1 Australian Dollar Equals 0.55 EUR \n \n 1 Australian Dollar Equals 0.49 GBP \n \n 1 Australian Dollar Equals 46.5 INR \n \n1 Australian Dollar Equals 65.5 JPY \n \n 1 Australian Dollar Equals 0.86 CAD</string>
    <string name="exchange_rates_header">Current Exchange Rates As Of the 2nd of April 2020</string>
    <string name="canadian_dollar">CAD</string>
    <string name="japanese_yen">JPY</string>
    <string name="indian_rupee">INR</string>
    <string name="greatBritish_pounds">GBP</string>
    <string name="european_pounds">EUR</string>
    <string name="unitedStates_dollar">USD</string>
    <string name="aud_to">AUD TO</string>
    <string name="moneyLogo">MoneyLogo</string>
    <string name="settings">Settings</string>
    <string name="instructions">Instructions</string>
</resources>
