<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E8C3A"
    tools:context=".ExchangeActivity">

    <EditText
        android:id="@+id/aud"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:autofillHints="@string/enter_aud"
        android:hint="@string/enter_aud"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#cccccc" />

    <TextView
        android:id="@+id/convert"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/days_one"
        android:text="@string/aud_to"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/currency_converted"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:autofillHints="@string/converted_currency"
        android:hint="@string/converted_currency"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#cccccc" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="40dp"
        android:background="#37BC61"
        android:fontFamily="@font/days_one"
        android:onClick="resetExchange"
        android:text="@string/reset"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_marginTop="2dp"
        android:background="#37BC61"
        android:fontFamily="@font/days_one"
        android:onClick="resetExchange"
        android:text="@string/settings"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/usd"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#37BC61"
                android:fontFamily="@font/days_one"
                android:onClick="onButtonClick"
                android:text="@string/unitedStates_dollar"
                android:textColor="#ffffff"
                android:textSize="42sp" />

            <Button
                android:id="@+id/eur"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#37BC61"
                android:fontFamily="@font/days_one"
                android:onClick="onButtonClick"
                android:text="@string/european_pounds"
                android:textColor="#ffffff"
                android:textSize="42sp" />

            <Button
                android:id="@+id/gbp"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#37BC61"
                android:fontFamily="@font/days_one"
                android:onClick="onButtonClick"
                android:text="@string/greatBritish_pounds"
                android:textColor="#ffffff"
                android:textSize="42sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/inr"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#37BC61"
                android:fontFamily="@font/days_one"
                android:onClick="onButtonClick"
                android:text="@string/indian_rupee"
                android:textColor="#ffffff"
                android:textSize="42sp" />

            <Button
                android:id="@+id/jpy"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#37BC61"
                android:fontFamily="@font/days_one"
                android:onClick="onButtonClick"
                android:text="@string/japanese_yen"
                android:textColor="#ffffff"
                android:textSize="42sp" />

            <Button
                android:id="@+id/cad"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#37BC61"
                android:fontFamily="@font/days_one"
                android:onClick="onButtonClick"
                android:text="@string/canadian_dollar"
                android:textColor="#ffffff"
                android:textSize="42sp" />

        </TableRow>


    </TableLayout>

</TableLayout>

